# mynestra

./: .dockerignore  .env.example  .gitattributes  .gitignore  Jenkinsfile  Makefile  README.md  compose.prod.yaml  compose.yaml  dev.ps1  manage.py  pyproject.toml
apps/accounts/: decorators.py  views.py
apps/automobile/: admin.py  apps.py  forms.py  (+4 more)
config/: asgi.py  urls_public.py  urls_tenants.py  wsgi.py
docker/: tailwind.Dockerfile  web-entrypoint.sh  web.Dockerfile  web.prod.Dockerfile
docs/: DEPLOY.md  DESIGN.md  PROMPT.md
static/: .gitkeep
templates/: 400.html  403.html  404.html  500.html  _icon_sprite.html  base.html  health.html
tests/: conftest.py  factories.py  test_accounting_mode.py  test_auth.py  test_automobile_posting.py  test_automobile_views.py  test_banking_expert.py  test_banking_models.py  test_banking_posting.py  test_banking_views.py  test_branches.py  test_cards_models.py  test_cards_posting.py  test_cards_views.py  test_categories_dates.py  test_coa_editor.py  test_contact_info.py  test_contacts_views.py  test_dashboards.py  test_dates.py  test_errors.py  test_families.py  test_finance_balances.py  test_finance_currency.py  test_finance_posting.py  test_finance_seed.py  test_finance_views.py  test_health.py  test_health_claim.py  test_health_plan.py  test_health_posting.py  test_health_prescription.py  test_health_views.py  test_household.py  test_insurance_posting.py  test_insurance_views.py  test_investments_contribution_limits.py  test_investments_corp_actions.py  test_investments_in_kind.py  test_investments_institutions.py  (+39 more)
(+457 files in other folders)
